Removing whitespace at bottom and fixing margin again

--- a/lab-2/css/style.css
+++ b/lab-2/css/style.css
@@ -4,11 +4,12 @@ body{
     justify-content: center;
     align-items: center;
     flex-basis: 100%;
+    margin-bottom: 0;
     flex-wrap: wrap;
     text-align: center;
 }
 h3{
-    font-size: 25px;
+    font-size: 14px;
 }
 a{
     color: white;
@@ -64,7 +65,7 @@ a{
     padding-top: 2px;
 }
 #pageBody{
-    margin-top: 80px;
+    margin-top: 50  px;
     margin-bottom: 90px;
     display: flex;
     flex-wrap: wrap;
@@ -98,12 +99,11 @@ a{
     padding-top: 10px;
     width: 100%;
     justify-content: space-around;
-    position: absolute;
-    max-height: 80px;   
+    position: absolute;   
     left: 0;
     flex-basis: 100%;
     align-items: center;
-    font-size: 14px;
+    font-size: 10px;
     flex-wrap: wrap;
     text-align: center;
     flex: 1;
@@ -114,6 +114,7 @@ a{
     padding: 1%;
     width: 100%; 
     bottom: 0;
+    margin-bottom: 0;
     left: 0;
 }
 #luckyLabel{
